--- a/contacts.html
+++ b/contacts.html
@@ -23,16 +23,49 @@
 				<a href="blog.html"><li>Blog</li></a>
 			</ul>		
 		</nav>
-<h3>My Done Projects</h3>
-		<div class="work-list">
-			<ul>
-				<li><a href="https://rakibul-hashan.github.io/sign-up-form/." target="_blank" >Sign Up Form</a></li>
-			</ul>
-		</div>
-	
 	</div>
 	</header>
+	<!--Contact Section Start-->
 	
+	<div class="container">
+	
+		<div class="contact">
+			<h1>Contact Us</h1>
+			
+			<div class="contact-form">
+			<form>
+			
+			<label for="fir-nam">Your Name</label>
+			<input id="fir-nam" type="text" />
+			
+			<label for="email">Your Email</label>
+			<input id="email" type="email" />
+			
+			<label for="pass">Your Password</label>
+			<input id="pass" type="password" />
+			
+			<label for="mess">Your Message</label>
+			<textarea id="mess" col="10" rows="10" placeholder="Write Message"></textarea>
+			
+			
+			<input type="submit" value="Send Message"/>
+			</form>
+			
+			
+			</div>
+		</div>
+		
+	
+	</div>
+	<!--Contact Section End-->
+	<br />
+	<br />
+	<br />
+                <!--Map Section-->
+				
+	<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d116834.13669278496!2d90.4193257!3d23.7806365!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sbn!2sbd!4v1587104087320!5m2!1sbn!2sbd" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                <!--Map Section-->
+
 	
 	
 </body>
